[package]

name = "statrs"
version = "0.11.0"
authors = ["Michael Ma"]
description = "Statistical computing library for Rust"
license = "MIT"
keywords = ["probability", "statistics", "stats", "distribution", "math"]
categories = ["science"]
documentation = "https://docs.rs/statrs/0.11.0/statrs/"
homepage = "https://github.com/boxtown/statrs"
repository = "https://github.com/boxtown/statrs"

[lib]

name = "statrs"
path = "src/lib.rs"

[dependencies]
GSL = { version = "1.1", optional = true, features = ["v2"] }
rand = "0.6"

[features]
von_mises = ["GSL"]
